--- a/secret-letter-211024.html
+++ b/secret-letter-211024.html
@@ -21,7 +21,7 @@
     <main class="secret-letter-container">
       <div class="secret-letter">
         <h1 class="secret-letter__heading-1">Secret Letter 2021-10-24</h1>
-        <p class="">NiM, this is for the times when you say, "tu chhad jana menu"</p>
+        <p class="">Gugu, this is for the times when you say, "tu chhad jana menu"</p>
         <p class="secret-letter__quotes">
           I let you in<br />
           in places I didn't know I kept secret <br />
